--- a/tauri/static/assets/css/keyboard.css
+++ b/tauri/static/assets/css/keyboard.css
@@ -3,6 +3,7 @@ section#keyboard {
     flex-direction: column;
     align-items: center;
     width: 56vw;
+    zoom: 0.73;
     position: relative;
     top: -0.925vh;
 }
